--- a/package.json
+++ b/package.json
@@ -30,5 +30,5 @@
       "last 1 safari version"
     ]
 	},
-	"homepage": "http://myname.github.io/myapp"
+	"homepage": "http://nickhericks.github.io/react-search-app"
 }
