--- a/package.json
+++ b/package.json
@@ -33,5 +33,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "http://nickhericks.github.io/react-search-app"
+  "homepage": "https://nickhericks.github.io/react-search-app"
 }
